fable/test/valid/add_dp_integer.f
      program prog
      double precision a, c
      c=a+i
      end
