fable/test/syntax_error/bad_or.f
      program prog
      logical a, b, c
      a = b .or c
      end
